--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emailjs/browser": "^3.11.0",
+    "@emailjs/browser": "^3.12.1",
     "@react-three/drei": "^9.80.3",
     "@react-three/fiber": "^8.13.6",
     "dotenv": "^16.3.1",
     "fast-glob": "^3.3.2",
-    "framer-motion": "^10.16.5",
+    "framer-motion": "^10.18.0",
     "maath": "^0.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^0.0.0",
     "react-tilt": "^1.0.2",
@@ -36,7 +37,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5"
+    "vite": "^7.1.5"
   },
   "description": "Welcome to my portfolio repository! This repository showcases a collection of my projects, work, and creations.",
   "main": "postcss.config.js",
